# batesposture

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  batesposture.spec  opencv2-posture-corrector.spec  pyproject.toml
.github/workflows/: build.yml  data-checks.yml  docker-publish.yml  title_check.py
batesposture/: __init__.py  __main__.py  application.py  main.py  util__create_score_icon.py  util__send_notification.py
batesposture/data/: database.py
batesposture/ml/: mediapipe_compat.py  pose_detector.py
batesposture/services/: camera_capture.py  camera_service.py  notification_service.py  platform_notification.py  score_service.py  settings_service.py  task_scheduler.py
batesposture/tests/: conftest.py  test_application.py  test_camera_capture.py  test_camera_service.py  test_database.py  test_integration_pipeline.py  test_main.py  test_mediapipe_compat.py  test_notification_service.py  test_platform_notification.py  test_pose_detector.py  test_resource_settings.py  test_score_icon.py  test_score_service.py  test_send_notification.py  test_settings_service.py  test_tray.py  test_ui_layout.py
batesposture/ui/: dashboard.py  onboarding.py  score_icon.py  settings_dialog.py  theme.py  tray.py
docs/: _config.yml  index.html
scripts/: build_local.bat  build_local.sh
src/: application.py  main.py  util__create_score_icon.py  util__send_notification.py
src/data/: database.py
src/ml/: pose_detector.py
src/services/: ai_coach_service.py  camera_service.py  notification_service.py  score_service.py  settings_service.py
src/tests/: test_integration_pipeline.py
src/ui/: dashboard.py  onboarding.py  settings_dialog.py  tray.py
web/: humans.txt  index.html  llms-full.txt  llms.txt  robots.txt  site.webmanifest  sitemap.xml
web/.well-known/: security.txt
