[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batesposture"
version = "1.1.2"
description = "Discreet system-tray posture monitor powered by MediaPipe and OpenCV."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["posture", "mediapipe", "opencv", "system-tray", "webcam"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Utilities",
]
dependencies = [
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "plyer>=2.1.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
]

[project.scripts]
batesposture = "batesposture.main:main"

[project.urls]
Homepage = "https://wtbates99.github.io/batesposture/"
Repository = "https://github.com/wtbates99/batesposture"
"Bug Tracker" = "https://github.com/wtbates99/batesposture/issues"

[tool.hatch.build.targets.wheel]
packages = ["batesposture"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Type google._upb._message.*:DeprecationWarning",
]

# Run the app:   uv run batesposture  (after pip install -e .)
#            or: uv run python -m batesposture
# Run tests:     uv run --group dev python -m pytest
# Install deps:  uv sync --all-groups
