[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batesposture"
version = "1.1.2"
description = "Discreet system-tray posture monitor powered by MediaPipe and OpenCV."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
keywords = ["posture", "mediapipe", "opencv", "system-tray", "webcam"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Utilities",
]
dependencies = [
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "plyer>=2.1.0",
    "psutil>=7.0.0",
    "pyqt6>=6.9.1",
]

[project.scripts]
batesposture = "batesposture.main:main"

[project.urls]
Homepage = "https://posture.palanbates.com"
Repository = "https://github.com/wtbates99/batesposture"
"Bug Tracker" = "https://github.com/wtbates99/batesposture/issues"

[tool.hatch.build.targets.wheel]
packages = ["batesposture"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=8.4.1",
    "ruff>=0.15.22",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"batesposture/main.py" = ["I001"]
"batesposture/services/settings_service.py" = ["I001"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Type google._upb._message.*:DeprecationWarning",
]

# Run the app:   uv run batesposture  (after pip install -e .)
#            or: uv run python -m batesposture
# Run tests:     uv run --group dev python -m pytest
# Install deps:  uv sync --locked --all-groups
